# DE-learning

./: .gitignore  .jenkinsfile  ODE-skeleton.ipynb  README.md  citations.tsv  genFigures.py  makefile  manuscript.docx  manuscript.html  manuscript.md  pyproject.toml  references.json  requirements.txt  ss_pca.py  variables.json
.github/workflows/: build.yml  coveragerc  test.yml
de/: Implement_model.ipynb  Implement_model.py  Neuron_ODE  ODE.ipynb  ODE.py  ODEmodel.py  PCA.py  PCA_helpers.py  Test_Simulation.ipynb  Untitled.ipynb  dataHelpers.py  factorization.py  fitting.py  graph.py  graphNorms.py  grndb_network.py  hypergeom.py  importData.ipynb  importData.py  impute.py  linearModel.py  logistic.py  matrix.py  matrix_operations.py  mia_test  model.jl  model.py  modelParams.py  newgenes.py  optimize.py  plot.py  py_model.py  scratchwork.ipynb  subset.py  tensor.py
de/data/: 190402_metadata.txt  A375_RNAi_matrix.npy  A375_genes.txt  A549_RNAi_matrix.npy  A549_genes.txt  HA1E_RNAi_matrix.npy  HA1E_genes.txt  HT29_RNAi_matrix.npy  HT29_genes.txt  MCF7_RNAi_matrix.npy  MCF7_genes.txt  PC3_RNAi_matrix.npy  PC3_genes.txt  cluster_assignment_bmdc.txt.xz  colonyGrowthResults_allhits.txt  exp_data.csv  node_Index.csv  steady_state_values.csv  sumarizedResults.txt  time_sol1.csv  time_sol10.csv  time_sol2.csv  time_sol3.csv  time_sol4.csv  time_sol5.csv  time_sol6.csv  time_sol7.csv  time_sol8.csv  time_sol9.csv  w.csv  w_new.csv
de/fancyimpute/: soft_impute.py  solver.py
manuscript/: 01.abstract.md  02.intro.md  03.results.md  05.methods.md  metadata.yaml
(+30 files in other folders)
