[tool.poetry]
name = "de"
version = "0.1.0"
description = ""
authors = ["Aaron Meyer <ameyer@ucla.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21"
scipy = "^1.7"
matplotlib = "^3.4"
tqdm = "^4.62.3"
seaborn = "^0.11"
svgutils = "^0.3"
scikit-learn = "^1.0"
networkx = "^2.6"
graphviz = "^0.18"
tensorly = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "de.figures.common:genFigure"
